--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="col-lg-8 my-auto">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-md-6">
                   <div class="feature-item">
                     <i class="fa"><img src="img/glitch.png" style="width: 1em;border-radius: 5%"/></i>
                     <h3>Glitch-soc</h3>
@@ -136,7 +136,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-md-6">
                   <div class="feature-item">
                     <i class="fa fa-font text-primary"></i>
                     <h3>BBCode / Markdown</h3>
@@ -147,11 +147,7 @@
                     </p>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-lg-6">
+                <div class="col-md-6">
                   <div class="feature-item">
                     <i class="fa fa-align-left text-primary"></i>
                     <h3>Enquete</h3>
@@ -161,7 +157,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-md-6">
                   <div class="feature-item">
                     <i class="fa text-primary">あ</i>
                     <h3>読み仮名</h3>
@@ -202,37 +198,45 @@
             <h2 class="section-heading">他にも...</h2>
             <div class="container">
               <div class="row">
-                <div class="col-lg-4">
+                <div class="col-md-3">
                   <div class="feature-item">
                     <i class="fa fa-filter text-primary"></i>
                     <h3>フィルター</h3>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-3">
                   <div class="feature-item">
                     <i class="fa fa-bookmark-o text-primary"></i>
                     <h3>ブックマーク</h3>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-3">
                   <div class="feature-item">
                     <i class="fa fa-angle-double-up text-primary"></i>
                     <h3>長文折りたたみ</h3>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-3">
+                  <div class="feature-item">
+                    <i class="fa fa-paint-brush text-primary"></i>
+                    <h3>お絵かき</h3>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4">
                   <div class="feature-item">
                     <i class="fa fa-users text-primary"></i>
                     <h3>マルチログイン</h3>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-4">
                   <div class="feature-item">
                     <i class="fa fa-cogs text-primary"></i>
                     <h3>テーマ変更</h3>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-4">
                   <div class="feature-item">
                     <i class="fa fa-user text-primary"></i>
                     <h3>プロフィール編集</h3>
