* Android版のみ対応

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
         <div class="row">
           <div class="col-md-8 mx-auto">
             <h2 class="section-heading">高機能プッシュ通知機能</h2>
+            * Android版のみ対応
             <p>
               通常の通知を配信できる事はもちろん、HTLで事前に設定したキーワードが発言されたら通知する<b>「キーワード検知」</b>機能があります。<br>
               あなたに関する話題でHTLが盛り上がっていたら、すぐにお知らせします。
