--- a/notification-terms.html
+++ b/notification-terms.html
@@ -55,6 +55,7 @@
           <li>私たちの配信サーバーやネットワークを破壊したり妨害する行為</li>
           <li>私たちの配信サーバーやネットワークに対して、意図的に過度な負荷を与える行為</li>
           <li>私たちの配信サーバーやネットワークでテスト目的の登録を行う行為(許可された場合を除く)</li>
+          <li>私たちの配布するKnzkAppから配信サーバーの認証キーを不正に読み取る行為</li>
           <li>その他、私たちが不適切と判断する行為</li>
         </ul>
         これらの禁止行為に該当すると私たちが判断した場合は、事前に通知する事なくプッシュ通知サービスの利用停止、法的な問題があった場合には行政・法的機関に通報、情報提供をできるものとします。
