--- a/notification-terms.html
+++ b/notification-terms.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>KnzkApp プライバシーポリシー</title>
+    <title>KnzkApp Notification (v2) 利用規約 / プライバシーポリシー</title>
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
